--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.4",
+    "dexie": "^3.0.3",
+    "dexie-react-hooks": "^1.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.1.6"
   },
   "scripts": {
