--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
   "author": "Anish Sinha",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.31.0",
+    "aws-sdk": "^2.989.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -23,6 +25,7 @@
     "express-session": "^1.17.2",
     "http": "0.0.1-security",
     "mongoose": "^6.0.4",
+    "multer": "^1.4.3",
     "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -33,6 +36,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
