--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "dompurify": "^2.3.2",
     "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
+    "jssoup": "0.0.12",
     "lodash": "^4.17.21",
+    "mathjax-react": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
