--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
+    "super-react-gist": "^1.0.4",
     "typescript": "^4.1.6"
   },
   "scripts": {
