--- a/client/package.json
+++ b/client/package.json
@@ -21,15 +21,20 @@
     "draft-js": "^0.11.7",
     "jssoup": "0.0.12",
     "lodash": "^4.17.21",
+    "materialize-css": "^1.0.0-rc.2",
     "mathjax-react": "^1.0.6",
     "react": "^17.0.2",
+    "react-chips": "^0.8.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-dropdown": "^1.9.2",
     "react-jsx-parser": "^1.28.4",
+    "react-materialize": "^3.9.9",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
+    "semantic-ui-react": "^2.0.4",
     "super-react-gist": "^1.0.4",
     "typescript": "^4.1.6"
   },
