--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.0.2",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -21,10 +25,10 @@
     "draft-js": "^0.11.7",
     "jssoup": "0.0.12",
     "lodash": "^4.17.21",
+    "material-ui-chip-input": "^2.0.0-beta.2",
     "materialize-css": "^1.0.0-rc.2",
     "mathjax-react": "^1.0.6",
     "react": "^17.0.2",
-    "react-chips": "^0.8.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropdown": "^1.9.2",
