--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.49",
     "@mui/material": "^5.0.2",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -18,6 +20,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "dexie": "^3.0.3",
     "dexie-react-hooks": "^1.0.7",
     "dompurify": "^2.3.2",
@@ -29,6 +32,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "mathjax-react": "^1.0.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropdown": "^1.9.2",
