--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,8 @@
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "concurrently": "^6.2.1",
-    "nodemon": "^2.0.12"
+    "jest": "^27.2.4",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
