Image uploads work in editor

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "dompurify": "^2.3.2",
     "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
+    "html-to-draftjs": "^1.5.0",
     "i18n-iso-countries": "^6.8.0",
     "jssoup": "0.0.12",
     "lodash": "^4.17.21",
@@ -74,6 +75,7 @@
     "@types/dompurify": "^2.2.3",
     "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "^0.11.5",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/lodash": "^4.14.173",
     "@types/quill": "^2.0.9",
     "@types/react-draft-wysiwyg": "^1.13.3",
