--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "@mui/material": "^5.0.2",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.24",
@@ -72,6 +71,7 @@
   },
   "proxy": "http://localhost:8000",
   "devDependencies": {
+    "@testing-library/react": "^9.5.0",
     "@types/dompurify": "^2.2.3",
     "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "^0.11.5",
@@ -79,6 +79,7 @@
     "@types/lodash": "^4.14.173",
     "@types/quill": "^2.0.9",
     "@types/react-draft-wysiwyg": "^1.13.3",
+    "jest": "^27.2.4",
     "node-sass": "^6.0.1"
   }
 }
