--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,9 @@
     "@mui/lab": "^5.0.0-alpha.49",
     "@mui/material": "^5.0.2",
     "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
+    "@types/jest": "^27.0.2",
     "@types/node": "^12.20.24",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
@@ -27,7 +27,7 @@
     "draft-js": "^0.11.7",
     "html-to-draftjs": "^1.5.0",
     "i18n-iso-countries": "^6.8.0",
-    "jssoup": "0.0.12",
+    "jssoup": "0.0.15",
     "lodash": "^4.17.21",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "materialize-css": "^1.0.0-rc.2",
@@ -42,6 +42,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-swipeable": "^6.2.0",
     "redux-persist": "^6.0.0",
     "semantic-ui-react": "^2.0.4",
     "super-react-gist": "^1.0.4",
@@ -71,7 +72,7 @@
   },
   "proxy": "http://localhost:8000",
   "devDependencies": {
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^12.1.2",
     "@types/dompurify": "^2.2.3",
     "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "^0.11.5",
@@ -79,7 +80,6 @@
     "@types/lodash": "^4.14.173",
     "@types/quill": "^2.0.9",
     "@types/react-draft-wysiwyg": "^1.13.3",
-    "jest": "^27.2.4",
     "node-sass": "^6.0.1"
   }
 }
